--- a/html/wincon_gallery.html
+++ b/html/wincon_gallery.html
@@ -478,7 +478,7 @@
 
 
 
-				<div id="modalPicture" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalPictureLabel" aria-hidden="true">
+				<div id="modalPicture" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modalPictureLabel" aria-hidden="true" onunload="$('.close').click()">
 				  <div class="modal-dialog" role="document">
 				    <div class="modal-content">
 				      <!-- Modal - header -->
