--- a/html/about.html
+++ b/html/about.html
@@ -36,16 +36,22 @@
 		</div>
 	</div>
 </div>
+<div id="myModal" class="modal">
+		  <span class="close">&times;</span>
+		  <img class="modal-content" id="img01">
+		  <div id="caption"></div>
+		</div>
 
-	<script>
-		$('.img').click(function() {
-		    var modal = document.getElementById('myModal');
-		    modal.style.display = "block";
-		    var ia = $(this).attr("src");
-		    $( "#img01" ).html( '<img class="js-modal-image img01" src="'+ia+'" />' );
-		    var span = document.getElementsById("myModal");
-		    span.onclick = function() { 
-		        modal.style.display = "none";
-		    }
-		});
-	</script>
+
+		<script>
+			$('img').click(function() {
+				var modal = document.getElementById('myModal');
+		   		modal.style.display = "block";
+				var ia = $(this).attr("src");
+				$( "#img01" ).html( '<img class="js-modal-image img01" src="'+ia+'" />' );
+				var span = document.getElementsByClassName("modal")[0];
+				span.onclick = function() { 
+					modal.style.display = "none";
+				}
+			});
+		</script>
