--- a/html/wall_mag.html
+++ b/html/wall_mag.html
@@ -9,13 +9,13 @@
 
 	<div id="myModal" class="modal">
 		  <span class="close">&times;</span>
-		  <img class="modal-content" id="img01">
+		  <div class="modal-content" id="img01"></div>
 		  <div id="caption"></div>
 		</div>
 
 
 		<script>
-			$('img').click(function() {
+			$('.img').click(function() {
 				var modal = document.getElementById('myModal');
 		   		modal.style.display = "block";
 				var ia = $(this).attr("src");
