--- a/html/activity.html
+++ b/html/activity.html
@@ -2,13 +2,13 @@
 	<center><div class="mainul"><div class="mainheading">Our Activities</div></div></center>
 	<p>An embodiment of the zeal to revive and preserve the Indian culture among youth,SPIC MACAY IITR Chapter has always won accolades for its dedicated efforts in the field. Besides bringing art aficionadoes to IIT Roorkee and neighbourhood educational institutions, it has been instrumental in inculcating a sense of pride and admiration for the Indian culture and heritage among youth.</p>
 
-	<div class="container"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><img src="./images/activities/kite.jpg" class="img"></div></div></div>
+	<div class="container"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><img src="./images/activities/kite.jpg" class="img" /></div></div></div>
 
 
 	<p>Depth and extent of our heritage are celebrated during an annual festival 'Virasat'. Truly resolved in the pursuit of our motto, the group's activities are not limited to organisation of performances by legendary artists. We also arrange for screening of movies and conduct quiz competitions to expand the extent of students' awareness. 'Makar Fiesta', one of the most eagerly awaited events in the campus, is put together by the team on the eve of Makar Sankranti. We recently celebrated the"North Zone Convention"-a Manthan of thoughts of traditonal values and modernisation as a part of 25 year celebrations. </p>
 
 	<div class="heading">Artists</div><hr class="head">
-	<div class="container"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><div class="border"><img src="./images/about/artists.jpg" class="img" title="artists"/></div></div></div></div>
+	<div class="container"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><div class="border"><img src="./images/about/artists.jpg" class="img" title="artists" /></div></div></div></div>
 	<p> The efforts of our chapter as a continuing movement would never have been  possible without the immense support of the great artistes of our cultural tradition who have nurtured the movement and helped it grow.Some of the esteemed artists who have performed in our campus since our chapter's inception include:</p>
 
 	<ul>
