--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="stylesheet" href="components/wincon.css">
 		<link rel="stylesheet" href="components/events.css">
 	</head>
-	<body onload="return community()">
+	<body onload="return community()" align="justify">
 		<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 		<div class="container" id="header" style="background-image: url('images/header.jpg');">
 			<div class="container col-md-12">
