--- a/html/events.html
+++ b/html/events.html
@@ -25,7 +25,7 @@
 				<center><h1>kuch hoga ab</h1></center>
 				<div class="leftcontent">
 				<div class="leftcontent">
-					<b>Date :</b> day & date hogi<br />
+					<b>Date :</b> day date hogi<br />
 					<b>Time :</b> hh:mm<br />
 					<b>Venue :</b> venue ka naam<br />
 				</div>
@@ -33,7 +33,7 @@
 					<b>Description of event :</b> artists ke bare mai kuch<br />
 					<b>Arrival of Artist(s) :</b> hh:mm<br />
 					<b>Commencement of event :</b> hh:mm<br />
-					<b>Anchors :</b> a & b<br />
+					<b>Anchors :</b> a and b<br />
 					<b>The proceedings of the concert are as follows :</b><br />
 					<ul class="leftcontent"><li>jo</li><li>jo</li><li>hua</li><li>hoga</li></ul>
 				</div>
