--- a/html/gallery.html
+++ b/html/gallery.html
@@ -2,25 +2,25 @@
 	<center><div class="mainul"><div class="mainheading">Gallery</div></div></center>
 	<div class="gallery-content">
 		<div id="gallery-content-center">
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/1.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/2.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/3.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/4.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/5.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/6.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/9.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/18.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/10.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/11.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/12.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/13.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/14.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/15.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/7.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/19.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/8.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/16.jpg" class="img" id="myImg" /></div>
-			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 galleryimg"><img src="images/gallery/17.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/1.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/2.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/3.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/4.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/5.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/6.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/9.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/18.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/10.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/11.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/12.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/13.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/14.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/15.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/7.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/19.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/8.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/16.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg"><img src="images/gallery/17.jpg" class="img" id="myImg" /></div>
 		</div>
 	</div>
 </div>
