--- a/html/events.html
+++ b/html/events.html
@@ -12,63 +12,8 @@
 			</center>
 			</div>
 		</div>
-		<div class="panel panel-default eventhead">
-			<div class="container headline" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-			<center>
-				<span class="date">date hogi</span>
-				<span class="topic">Kuch hoga ab</span>
-				<span class="place">venue hoga</span>
-			</center>
-			</div>
-			<div id="collapse1" class="panel-collapse collapse in">
-				<div class="panel-body">
-				<center><h1>kuch hoga ab</h1></center>
-				<div class="leftcontent">
-				<div class="leftcontent">
-					<b>Date :</b> day date hogi<br />
-					<b>Time :</b> hh:mm<br />
-					<b>Venue :</b> venue ka naam<br />
-				</div>
-					<b>Artists :</b> <ol class="leftcontent"><li>jo</li><li>jo</li><li>ayenge</li></ol></div>
-					<b>Description of event :</b> artists ke bare mai kuch<br />
-					<b>Arrival of Artist(s) :</b> hh:mm<br />
-					<b>Commencement of event :</b> hh:mm<br />
-					<b>Anchors :</b> a and b<br />
-					<b>The proceedings of the concert are as follows :</b><br />
-					<ul class="leftcontent"><li>jo</li><li>jo</li><li>hua</li><li>hoga</li></ul>
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default eventhead">
-			<div class="container headline" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-			<center>
-				<span class="date">gadgsh</span>
-				<span class="topic">adgsh</span>
-				<span class="place">adgsh</span>
-			</center>
-			</div>
-			<div id="collapse2" class="panel-collapse collapse">
-				<div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-					sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-				</div>
-			</div>
-		</div>
-		<div class="panel panel-default eventhead">
-			<div class="container headline" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-			<center>
-				<span class="date">gadgsh</span>
-				<span class="topic">adgsh</span>
-				<span class="place">adgsh</span>
-			</center>
-			</div>
-			<div id="collapse3" class="panel-collapse collapse">
-				<div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-					sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-				</div>
-			</div>
-		</div>
+		<div id="allevents"></div>
+		<script>abcd();</script>
 	</div> 
 
 
