--- a/html/events.html
+++ b/html/events.html
@@ -5,11 +5,10 @@
 	<div class="panel-group" id="accordion">
 		<div class="panel panel-default eventhead">
 			<div class="container config" data-toggle="collapse" data-parent="#accordion" href="#collapse0">
-			<center>
+			
 				<span class="date">Date</span>
-				<span class="topic">Event</span>
 				<span class="place">Venue</span>
-			</center>
+				<center><div class="topic">Event</div></center>
 			</div>
 		</div>
 		<div id="allevents"></div>
