--- a/html/team.html
+++ b/html/team.html
@@ -71,18 +71,17 @@
 	<div class="container">
 		<p class="gallery-content">Our chapter consists of bright, young students from all branches and courses (UG,PG and MBA level) at IIT Roorkee:</p>
 		<div class="col-md-12">
-			<div class="heading">Forth Year / Final Year</div><hr class="head" />	
-			<div id="student"></div><p>
-			<script>abcd1();</script>
-			<div class="heading">Third Year</div><hr class="head" />	
-			<div id="student_3"></div><p>
-			<script>abcd2();</script>
-			<div class="heading">Second Year</div><hr class="head" />	
-			<div id="student_2"></div><p>
-			<script>abcd3();</script>
-			<div class="heading">First Year</div><hr class="head" />	
+			<div>
+				<div class="heading">Forth Year / Final Year</div>
+				<div id="student_4"></div>
+				<script>abcd1();</script>
+			</div>
+			<div class="heading">Third Year</div>
+			<div id="student_3"></div><p />
+			<div class="heading">Second Year</div>
+			<div id="student_2"></div><p />
+			<div class="heading">First Year</div>
 			<div id="student_1"></div>
-			<script>abcd4();</script>
 		</div>
 	</div>
 	</section>
