--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 									Explorer<span class="caret"></span>
 								</a>
 								<ul class="dropdown-content drop-menu">
-			        				<li class="button"><a href="files/information_brochure.pdf" class="but_text">Information Brochure</a></li>
-			        				<li class="button"><a href="files/Newsletter.pdf" class="but_text">Newsletter</a></li>
+			        				<li class="button"><a href="https://drive.google.com/uc?id=0B0yu2ciuGbKSOFdiRU9BUDU1RWM" class="but_text">Information Brochure</a></li>
+			        				<li class="button"><a href="https://drive.google.com/uc?id=0B0yu2ciuGbKSZVUtZDRfc1FpRXc" class="but_text">Newsletter</a></li>
 			        				<li class="button"><a onclick="return wall()" class="but_text">Wall Magazine</a></li>
 			      				</ul>
 			    			</li>
