--- a/html/team.html
+++ b/html/team.html
@@ -71,17 +71,23 @@
 	<div class="container">
 		<p class="gallery-content">Our chapter consists of bright, young students from all branches and courses (UG,PG and MBA level) at IIT Roorkee:</p>
 		<div class="col-md-12">
-			<div>
-				<div class="heading">Forth Year / Final Year</div>
+			<div class="container">
+				<div class="heading"><center>Forth Year / Fifth Year</center></div>
 				<div id="student_4"></div>
 				<script>abcd1();</script>
 			</div>
-			<div class="heading">Third Year</div>
-			<div id="student_3"></div><p />
-			<div class="heading">Second Year</div>
-			<div id="student_2"></div><p />
-			<div class="heading">First Year</div>
-			<div id="student_1"></div>
+			<div class="container">
+				<div class="heading"><center>Third Year</center></div>
+				<div id="student_3"></div>
+			</div>
+			<div class="container">
+				<div class="heading"><center>Second Year</center></div>
+				<div id="student_2"></div>
+			</div>
+			<div class="container">
+				<div class="heading"><center>First Year</center></div>
+				<div id="student_1"></div>
+			</div>
 		</div>
 	</div>
 	</section>
