--- a/html/home.html
+++ b/html/home.html
@@ -107,15 +107,15 @@
 </div>
 
 
-<script>
-	$('.img').click(function() {
-		var modal = document.getElementById('myModal');
-   		modal.style.display = "block";
-		var ia = $(this).attr("src");
-		$( "#img01" ).html( '<img class="js-modal-image img01" src="'+ia+'" />' );
-		var span = document.getElementsByClassName("modal")[0];
-		span.onclick = function() { 
-			modal.style.display = "none";
-		}
-	});
-</script>
+		<script>
+			$('.img').click(function() {
+				var modal = document.getElementById('myModal');
+		   		modal.style.display = "block";
+				var ia = $(this).attr("src");
+				$( "#img01" ).html( '<div class="col-lg-0 col-sm-0"></div><img class="js-modal-image img01 col-lg-3 col-sm-8" src="'+ia+'" />' );
+				var span = document.getElementsByClassName("modal")[0];
+				span.onclick = function() { 
+					modal.style.display = "none";
+				}
+			});
+		</script>
