--- a/html/wincon_gallery.html
+++ b/html/wincon_gallery.html
@@ -68,7 +68,7 @@
 		<div class="grid__item grid__sizer galleryimg">
 			<div>
 				<button class="js-button btn btn-secondary-outline center-block" data-toggle="modal" data-imageCaption="Bharti Bandhu Felicitating Bundu Khan Langa Ji" data-target="#modalPicture" type="button" value="Expand photo" role="button" imgsrc="images/wincongal/bharti bandhu felicitating bundu khan langa ji.webp.jpg">
-			<img class="img" src = "images/wincongal/bharti bandhu felicitating bundu khan langa ji.webp.jpg" style="width:260px; 		height=172px;" alt="Image not Found"/>
+			<img class="img" src = "images/wincongal/bharti bandhu felicitating bundu khan langa ji.webp.jpg" alt="Image not Found"/>
 				</button>
 			</div>
 		</div>
