--- a/html/wincon_gallery.html
+++ b/html/wincon_gallery.html
@@ -54,7 +54,7 @@
 		<div class="grid__item grid__sizer galleryimg">
 			<div>
 				<button class="js-button btn btn-secondary-outline center-block" data-toggle="modal" data-imageCaption="Sahitya Academy Award Winner Ashok Vajpeyi ji addressing the audience" data-target="#modalPicture" type="button" value="Expand photo" role="button" imgsrc="images/wincongal/Sahitya Academy Award Winner Ashok Vajpeyi ji addressing the audience.jpg">
-			<img class="img" src = "images/wincongal/Sahitya Academy Award Winner Ashok Vajpeyi ji addressing the audience.jpg" 		alt="Image not Found"/>
+			<img class="img" src = "images/wincongal/Sahitya Academy Award Winner Ashok Vajpeyi ji addressing the audience.jpg" />
 				</button>
 			</div>
 		</div>
