--- a/html/team.html
+++ b/html/team.html
@@ -73,20 +73,20 @@
 		<div class="col-md-12">
 			<div class="container">
 				<div class="heading"><center>Forth Year / Fifth Year</center></div>
-				<div id="student_4"></div>
+				<div id="student_4" class="row fix"></div>
 				<script>abcd1();</script>
 			</div>
 			<div class="container">
 				<div class="heading"><center>Third Year</center></div>
-				<div id="student_3"></div>
+				<div id="student_3" class="row fix"></div>
 			</div>
 			<div class="container">
 				<div class="heading"><center>Second Year</center></div>
-				<div id="student_2"></div>
+				<div id="student_2" class="row fix"></div>
 			</div>
 			<div class="container">
 				<div class="heading"><center>First Year</center></div>
-				<div id="student_1"></div>
+				<div id="student_1" class="row fix"></div>
 			</div>
 		</div>
 	</div>
