--- a/html/wincon.html
+++ b/html/wincon.html
@@ -16,7 +16,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="row fix">
+				<div class="">
 					<div class="filter-list row fix">
 					<div id="workshop" class="eve mix rent mrgb5x col-lg-4 col-md-4 col-sm-6 col-xs-6">
 						<div class="property-box rent-2 animated out" data-delay="0" data-animation="fadeInUp">
