--- a/html/wincon.html
+++ b/html/wincon.html
@@ -16,8 +16,8 @@
 						</ul>
 					</div>
 				</div>
-				<div class="">
-					<div class="filter-list row fix">
+				<div class="filter-list">
+					<div class="row fix">
 					<div id="workshop" class="eve mix rent mrgb5x col-lg-4 col-md-4 col-sm-6 col-xs-6">
 						<div class="property-box rent-2 animated out" data-delay="0" data-animation="fadeInUp">
 							<div class="appartment-img"><img class="img" src="images/qvrenti/wincon/Pandit Hari Prasad Chaurasia.jpg" class="img-responsive" alt="#" />
