htm files conversion

--- a/htm/team.htm
+++ b/htm/team.htm
@@ -72,7 +72,7 @@
 		<p class="gallery-content">Our chapter consists of bright, young students from all branches and courses (UG,PG and MBA level) at IIT Roorkee:</p>
 		<div class="col-md-12">
 			<div class="container">
-				<div class="heading"><center>Forth Year / Fifth Year</center></div>
+				<div class="heading"><center>Fourth Year / Fifth Year</center></div>
 				<div id="student_4" class="row fix"></div>
 				<script>abcd1();</script>
 			</div>
