--- a/htm/events.htm
+++ b/htm/events.htm
@@ -1,8 +1,7 @@
 <div class="container" id="gallery">
 	<center><div class="mainul"><div class="mainheading">Events</div></div></center>
-
-
-	<div class="panel-group" id="accordion">
+	<br />
+	<div class="panel-group animate-bottom" id="accordion">
 		<div class="panel panel-default eventhead">
 			<div class="container config" data-toggle="collapse" data-parent="#accordion" href="#collapse0">
 			
