--- a/htm/contacts.htm
+++ b/htm/contacts.htm
@@ -1,8 +1,8 @@
 <div class="container" id="gallery">
 	<center><div class="mainul"><div class="mainheading">Contact Us</div></div></center>
-
-	<p class="gallery-content">SPIC MACAY aspires to be much more than a youth body arranging free concerts .It is your movement and needs your support to further this great cause.</p>
-	<p class="leftcontent">
+	<br />
+	<p class="gallery-content animate-bottom">SPIC MACAY aspires to be much more than a youth body arranging free concerts .It is your movement and needs your support to further this great cause.</p>
+	<p class="leftcontent animate-bottom">
 		For Sponsorships and Donations, Contact:<br />
 		Dr. Aalok Mishra,<br />
 		Staff Advisor, SPICMACAY Heritage Club, IIT Roorkee,<br />
