--- a/htm/gallery.htm
+++ b/htm/gallery.htm
@@ -1,33 +1,34 @@
 <div class="container" id="gallery">
 	<center><div class="mainul"><div class="mainheading">Gallery</div></div></center>
+	<br />
 	<div class="gallery-content">
 		<div id="gallery-content-center">
-			<div class="galleryimg"><img src="images/gallery/1.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/2.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/3.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/4.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/5.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/6.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/9.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/18.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/10.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/11.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/12.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/13.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/14.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/15.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/7.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/19.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/8.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/16.jpg" class="img" id="myImg" /></div>
-			<div class="galleryimg"><img src="images/gallery/17.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/1.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/2.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/3.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/4.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/5.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/6.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/9.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/18.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/10.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/11.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/12.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/13.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/14.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/15.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/7.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/19.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/8.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/16.jpg" class="img" id="myImg" /></div>
+			<div class="galleryimg animate-bottom"><img src="images/gallery/17.jpg" class="img" id="myImg" /></div>
 		</div>
 	</div>
 </div>
 
 
 
-<div id="myModal" class="modal">
+<div id="myModal" class="modal animate-bottom">
   <span class="close">&times;</span>
   <div class="modal-content" id="img01"></div>
   <div id="caption"></div>
