--- a/htm/team.htm
+++ b/htm/team.htm
@@ -1,15 +1,15 @@
 <div class="container" id="gallery">
 	<center><div class="mainul"><div class="mainheading">Our Team</div></div></center>
+	<br />
+	<p class="gallery-content animate-bottom">SPIC MACAY, the Society for Promotion of Indian Classical Music And Culture Amongst Youth, a voluntary and non-profit movement,was started in 1977 by Dr. Kiran Seth to promote Indian Culture amongst youth.</p>
+	<div class="container animate-bottom"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><div class="iitroorkee"><img src="./images/chapter/main-building.jpg" class="img" id="building" /></div></div></div></div>
 
-	<p class="gallery-content">SPIC MACAY, the Society for Promotion of Indian Classical Music And Culture Amongst Youth, a voluntary and non-profit movement,was started in 1977 by Dr. Kiran Seth to promote Indian Culture amongst youth.</p>
-	<div class="container"><div class="col-lg-2 col-md-1 col-sm-0" /><div class="col-lg-8 col-md-10 col-sm-12"><div class="iitroorkee"><img src="./images/chapter/main-building.jpg" class="img" id="building" /></div></div></div></div>
-
-	<p class="gallery-content">The IIT Roorkee chapter of SPIC MACAY, started in 1985, has been working relentlessly to uphold the spirit and zeal of the movement . A large number of diverse events have been held in the past to give the students and community a feeling of our rich cultural heritage. SPIC MACAY is completely managed by a group of student enthusiasts,right from preparing the venue, providing a befitting hospitality to the artist and raising funds through donations and sponsorships from individuals and corporate houses. The IIT Roorkee Chapter organizes a number of programs on campus as well as in the neighboring schools and COER(College of Engineering,Roorkee).</p>
+	<p class="gallery-content animate-bottom">The IIT Roorkee chapter of SPIC MACAY, started in 1985, has been working relentlessly to uphold the spirit and zeal of the movement . A large number of diverse events have been held in the past to give the students and community a feeling of our rich cultural heritage. SPIC MACAY is completely managed by a group of student enthusiasts,right from preparing the venue, providing a befitting hospitality to the artist and raising funds through donations and sponsorships from individuals and corporate houses. The IIT Roorkee Chapter organizes a number of programs on campus as well as in the neighboring schools and COER(College of Engineering,Roorkee).</p>
 
 	<section id="faculty">
 		<div class="heading teamheading"><center><b>Faculty Advisors</b></center></div>
 		<div class="container">
-			<div class="col-lg-6 col-md-12 col-sm-12 entry">
+			<div class="col-lg-6 col-md-12 col-sm-12 entry animate-bottom">
 				<div class="name">Siddharth Chakravorty</div>
 				<img src="./images/team/faculty/siddharth_sir.jpg" class="foto"/>
 				<br />
@@ -22,7 +22,7 @@
 					Ph: +91 - 1332 - 285674 <br />  
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-12 col-sm-12 entry">
+			<div class="col-lg-6 col-md-12 col-sm-12 entry animate-bottom">
 				<div class="name">Manish Shirkhande</div>
 				<img src="images/team/faculty/manish_sir.jpg" class="foto"/>
 				<br />
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="col-lg-6 col-md-12 col-sm-12 entry">
+			<div class="col-lg-6 col-md-12 col-sm-12 entry animate-bottom">
 				<div class="name">Vinay Pant</div>
 				<img src="images/team/faculty/vinay_sir.jpg" class="foto"/>
 				<br />
@@ -50,7 +50,7 @@
 					Ph: +91 - 1332 - 285396  <br />
 				</div>
 			</div>
-			<div class="col-lg-6 col-md-12 col-sm-12 entry">
+			<div class="col-lg-6 col-md-12 col-sm-12 entry animate-bottom">
 				<div class="name">Aalok Misra</div>
 				<img src="images/team/faculty/aalok_sir.jpg" class="foto"/>
 				<br />
@@ -69,7 +69,7 @@
 	<section id="students">
 	<div class="heading teamheading"><center><b>Students</b></center></div>
 	<div class="container">
-		<p class="gallery-content">Our chapter consists of bright, young students from all branches and courses (UG,PG and MBA level) at IIT Roorkee:</p>
+		<p class="gallery-content animate-bottom">Our chapter consists of bright, young students from all branches and courses (UG,PG and MBA level) at IIT Roorkee:</p>
 		<div class="col-md-12">
 			<div class="container">
 				<div class="heading"><center>Fourth Year / Fifth Year</center></div>
@@ -93,7 +93,7 @@
 	</section>
 </div>
 
-		<div id="myModal" class="modal">
+		<div id="myModal" class="modal animate-bottom">
 		  <span class="close">&times;</span>
 		  <div class="modal-content" id="img01"></div>
 		  <div id="caption"></div>
