remove no members

--- a/htm/contacts.htm
+++ b/htm/contacts.htm
@@ -14,11 +14,13 @@
 	</p>
 	<br>
 	<div class="heading animate-bottom">Our Office</div><hr class="head animate-bottom" />
-	<div class="container">
+	<div class="container animate-bottom">
 		<div class="col-lg-4 col-md-12">
 			SPIC MACAY Office,<br>Hall no. 2, Second Floor,<br>Commercial Block, MAC,<br>IIT Roorkee
 247667 Roorkee<br><br>
 		</div>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1729.8961712917699!2d77.89586753285606!3d29.87026201080215!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8f866617d941cb4b!2sMulti+Activity+Center!5e0!3m2!1sen!2sin!4v1504524445700" class="col-lg-8 col-md-12" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<div class="col-lg-8 col-md-12">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1729.8961712917699!2d77.89586753285606!3d29.87026201080215!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8f866617d941cb4b!2sMulti+Activity+Center!5e0!3m2!1sen!2sin!4v1504524445700" height="500" frameborder="0" style="border:0" width="100%" allowfullscreen></iframe>
+		</div>
 	</div>
 </div>
