update faculty member

--- a/htm/contacts.htm
+++ b/htm/contacts.htm
@@ -4,13 +4,13 @@
 	<p class="gallery-content animate-bottom">SPIC MACAY aspires to be much more than a youth body arranging free concerts .It is your movement and needs your support to further this great cause.</p>
 	<p class="leftcontent animate-bottom">
 		For Sponsorships and Donations, Contact:<br />
-		Dr. Aalok Mishra,<br />
-		Staff Advisor, SPICMACAY Heritage Club, IIT Roorkee,<br />
-		Dept. of Physics,<br />
+		Dr. Pradeep K. Jha,<br />
+		Faculty Advisor, SPICMACAY Heritage Club, IIT Roorkee,<br />
+		Department of Mechanical and Industrial Engineering,<br />
 		Indian Institute of Technology Roorkee<br />
 		Roorkee 247667<br />
 		Uttarakhand, INDIA<br />
-		aalokfph@iitr.ac.in<br />
+		pkjhafme[at]iitr.ac.in<br />
 	</p>
 	<br>
 	<div class="heading animate-bottom">Our Office</div><hr class="head animate-bottom" />
