update js file name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<link rel="shortcut icon" href="images/iconic.png" type="image/png" />
 		<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
 		<script src="components/spic.js"></script>
-		<script src="components/home.js"></script>
+		<script src="components/team.js"></script>
+		<script src="components/wincon.js"></script>
 		<script src="components/events.js"></script>
   		<link rel="stylesheet" href="components/spic.css">
 		<link rel="stylesheet" href="components/home.css">
