--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<link rel="shortcut icon" href="images/iconic.png" type="image/png" />
 		<link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css'>
-		<script src="components/spic.js"></script>
-		<script src="components/home.js"></script>
-		<script src="components/events.js"></script>
-  		<link rel="stylesheet" href="components/spic.css">
-		<link rel="stylesheet" href="components/home.css">
-		<link rel="stylesheet" href="components/gallery.css">
-		<link rel="stylesheet" href="components/wincon.css">
-		<link rel="stylesheet" href="components/events.css">
+		<script src="js/spic.js"></script>
+		<script src="js/team.js"></script>
+		<script src="js/wincon.js"></script>
+		<script src="js/events.js"></script>
+  		<link rel="stylesheet" href="css/spic.css">
+		<link rel="stylesheet" href="css/home.css">
+		<link rel="stylesheet" href="css/gallery.css">
+		<link rel="stylesheet" href="css/wincon.css">
+		<link rel="stylesheet" href="css/events.css">
 	</head>
 	<body onload="return community()" align="justify">
 		<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
